Create Preprocessing Pipeline

--- a/finance_fault_detector.ipynb
+++ b/finance_fault_detector.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "32TkITosAIaR",
-        "outputId": "d6d49f07-10f1-4857-9d41-2640cee04d6f"
+        "outputId": "737a2747-78c1-4da9-f51f-abe6a61c8d48"
       },
       "outputs": [
         {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "VUaVr33GAPdX"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "cn6AU3VzAusf"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -93,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YHNSBwvhBp8s",
-        "outputId": "35773c2b-a2fc-4ac0-f76e-9448e69cfb4a"
+        "outputId": "4dbebfc0-db58-44d2-d085-2a8244114c2f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
       "metadata": {
         "id": "lgT5zAHRBCsf"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -730,17 +730,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Transforming column names to lowercase\n",
         "df.columns = df.columns.str.lower()"
       ],
       "metadata": {
         "id": "Qsk3W3vwCJlb"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Columns that will be removed\n",
         "cols_to_drop = [' erc20 most sent token type',\n",
         "                ' erc20_most_rec_token_type',\n",
         "                'address',\n",
@@ -750,18 +752,19 @@
       "metadata": {
         "id": "FP6yWXK8DoHS"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Take columns that's not in cols_to_drop and it's not flag\n",
         "features = [x for x in df.columns if (x != 'flag' and x not in cols_to_drop)]"
       ],
       "metadata": {
         "id": "qB7oxqM6HMbP"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -837,12 +840,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# Number of different features in each column\n",
         "unique_values = df.nunique()"
       ],
       "metadata": {
         "id": "AWR-JpFfHcF3"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -925,12 +929,193 @@
     {
       "cell_type": "code",
       "source": [
+        "# Remove column that is constant\n",
         "features = [x for x in features if unique_values[x] > 1]"
       ],
       "metadata": {
         "id": "r056NuHdHf3p"
       },
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class PipeSteps(BaseEstimator, TransformerMixin):\n",
+        "  def __init__(self, columns=[]):\n",
+        "    self.columns = columns\n",
+        "\n",
+        "  # Fit data to the training format\n",
+        "  def fit(self, X, y=None):\n",
+        "    return self\n",
+        "\n",
+        "  # Transform input data\n",
+        "  def transform(self, X):\n",
+        "    X = X.copy()\n",
+        "\n",
+        "    return X"
+      ],
+      "metadata": {
+        "id": "BcCnfhuDFLlc"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SelectColumns(PipeSteps):\n",
+        "  def transform(self, X):\n",
+        "    # Copy data\n",
+        "    X = X.copy()\n",
+        "\n",
+        "    # Select and return columns choosen\n",
+        "    return X[self.columns]"
+      ],
+      "metadata": {
+        "id": "eER8qQHDHLm3"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class FillData(PipeSteps):\n",
+        "  def fit(self, X, y = None):\n",
+        "    # Calculate the mean of each column\n",
+        "    self.means = { col : X[col].mean() for col in self.columns }\n",
+        "\n",
+        "    # return self instance\n",
+        "    return self\n",
+        "\n",
+        "  # Fill data with mean\n",
+        "  def transform(self, X):\n",
+        "    X = X.copy()\n",
+        "\n",
+        "    for col in self.columns:\n",
+        "      X[col].fillna(self.means[col], inplace=True)\n",
+        "\n",
+        "    return X"
+      ],
+      "metadata": {
+        "id": "yyNxvnQCLZjJ"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class StandardData(PipeSteps):\n",
+        "  # Fit data with Standard Scaler\n",
+        "  def fit(self, X, y = None):\n",
+        "    self.scaler = StandardScaler()\n",
+        "\n",
+        "    self.scaler.fit(X[self.columns])\n",
+        "\n",
+        "    return self\n",
+        "\n",
+        "  def transform(self, X):\n",
+        "    X = X.copy()\n",
+        "\n",
+        "    X[self.columns] = self.scaler.transform(X[self.columns])\n",
+        "\n",
+        "    return X"
+      ],
+      "metadata": {
+        "id": "5UZNAoqRNpFk"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class GetData(PipeSteps):\n",
+        "  def transform(self, X):\n",
+        "    X = X.copy()\n",
+        "\n",
+        "    # Return values of DataFrame like a Numpy Array\n",
+        "    return X.values"
+      ],
+      "metadata": {
+        "id": "KOabwhDGJPCR"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "preprocessing_pipeline = Pipeline([('feature_selection', SelectColumns(features)),\n",
+        "                                  ('fill_missing', FillData(features)),\n",
+        "                                  ('standard_scaling', StandardData(features)),\n",
+        "                                  ('returnValues', GetData())])"
+      ],
+      "metadata": {
+        "id": "XP-3FdXGJ9_z"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Input\n",
+        "X = df[features]"
+      ],
+      "metadata": {
+        "id": "xXQn2FfXQ7ec"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Output\n",
+        "y = df['flag']"
+      ],
+      "metadata": {
+        "id": "FhdVYdnuRiyZ"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = to_categorical(y)"
+      ],
+      "metadata": {
+        "id": "9rDoAImWRsT9"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split Data at Train and Test\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+      ],
+      "metadata": {
+        "id": "yNwxfmTuRy4a"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train = preprocessing_pipeline.fit_transform(X_train)\n",
+        "X_test = preprocessing_pipeline.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "Mz9Q46R8R7ir"
+      },
+      "execution_count": 23,
       "outputs": []
     }
   ]
