--- a/finance_fault_detector.ipynb
+++ b/finance_fault_detector.ipynb
@@ -1117,6 +1117,104 @@
       },
       "execution_count": 23,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Creating Model**"
+      ],
+      "metadata": {
+        "id": "7ct-0DnnTo8N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Sequential()"
+      ],
+      "metadata": {
+        "id": "XHNGoyezTs2u"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.add(Input(shape = (len(features),)))\n",
+        "\n",
+        "model.add(Dense(len(features), activation = 'relu'))\n",
+        "\n",
+        "model.add(Dense(20, activation = 'relu'))\n",
+        "\n",
+        "model.add(Dense(5, activation = 'relu'))\n",
+        "\n",
+        "model.add(Dense(2, activation = 'softmax'))"
+      ],
+      "metadata": {
+        "id": "_ZPZftFSUOZw"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.compile(optimizer = 'adam', loss = 'categorical_crossentropy', metrics = ['accuracy'])"
+      ],
+      "metadata": {
+        "id": "zQF1ODyGVCq0"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HT3vTaY1VXz1",
+        "outputId": "4fd611c5-0a12-461a-ff0f-5e1e6d0c04b4"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " dense (Dense)               (None, 38)                1482      \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 20)                780       \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 5)                 105       \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             (None, 2)                 12        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 2379 (9.29 KB)\n",
+            "Trainable params: 2379 (9.29 KB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ne1V6tznVa7Y"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
