Training and Evaluating

--- a/finance_fault_detector.ipynb
+++ b/finance_fault_detector.ipynb
@@ -1103,7 +1103,7 @@
       "metadata": {
         "id": "yNwxfmTuRy4a"
       },
-      "execution_count": 22,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1115,7 +1115,7 @@
       "metadata": {
         "id": "Mz9Q46R8R7ir"
       },
-      "execution_count": 23,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -1208,10 +1208,176 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Training and Evaluating**"
+      ],
+      "metadata": {
+        "id": "8TPN6IBuYkyu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "history = model.fit(X_train, y_train, validation_data = (X_test, y_test), epochs = 10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d8huqLasYnY9",
+        "outputId": "decbcc8c-fa43-4eae-e68e-0a4f315baac9"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "216/216 [==============================] - 2s 9ms/step - loss: 0.1066 - accuracy: 0.9637 - val_loss: 0.1523 - val_accuracy: 0.9546\n",
+            "Epoch 2/10\n",
+            "216/216 [==============================] - 1s 6ms/step - loss: 0.1004 - accuracy: 0.9662 - val_loss: 0.1548 - val_accuracy: 0.9550\n",
+            "Epoch 3/10\n",
+            "216/216 [==============================] - 2s 7ms/step - loss: 0.0987 - accuracy: 0.9663 - val_loss: 0.1515 - val_accuracy: 0.9533\n",
+            "Epoch 4/10\n",
+            "216/216 [==============================] - 1s 5ms/step - loss: 0.0960 - accuracy: 0.9659 - val_loss: 0.1529 - val_accuracy: 0.9553\n",
+            "Epoch 5/10\n",
+            "216/216 [==============================] - 1s 2ms/step - loss: 0.0933 - accuracy: 0.9673 - val_loss: 0.1444 - val_accuracy: 0.9577\n",
+            "Epoch 6/10\n",
+            "216/216 [==============================] - 1s 2ms/step - loss: 0.0914 - accuracy: 0.9681 - val_loss: 0.1450 - val_accuracy: 0.9607\n",
+            "Epoch 7/10\n",
+            "216/216 [==============================] - 1s 2ms/step - loss: 0.0895 - accuracy: 0.9678 - val_loss: 0.1484 - val_accuracy: 0.9543\n",
+            "Epoch 8/10\n",
+            "216/216 [==============================] - 1s 3ms/step - loss: 0.0851 - accuracy: 0.9689 - val_loss: 0.1350 - val_accuracy: 0.9607\n",
+            "Epoch 9/10\n",
+            "216/216 [==============================] - 1s 2ms/step - loss: 0.0859 - accuracy: 0.9675 - val_loss: 0.1480 - val_accuracy: 0.9567\n",
+            "Epoch 10/10\n",
+            "216/216 [==============================] - 1s 3ms/step - loss: 0.0846 - accuracy: 0.9692 - val_loss: 0.1417 - val_accuracy: 0.9594\n",
+            "CPU times: user 7.37 s, sys: 311 ms, total: 7.69 s\n",
+            "Wall time: 9.37 s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predict = [np.argmax(x) for x in model.predict(X_test)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8VnOw5ocY-pb",
+        "outputId": "816fe8e3-82d4-4580-ed97-2c7369238718"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "93/93 [==============================] - 0s 2ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "acc = metrics.accuracy_score(predict, [np.argmax(y) for y in y_test])"
+      ],
+      "metadata": {
+        "id": "k5NvXpHXZ5An"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'Test Accuracy: {acc:.2%}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oMG1rimRadEC",
+        "outputId": "c676ae77-33c6-4c83-b886-6bbc1e735350"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Accuracy: 95.94%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "auc = metrics.roc_auc_score([np.argmax(y) for y in y_test], model.predict(X_test)[:,1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DvXoKtkrbaZp",
+        "outputId": "1aecc8ef-4551-495d-dc9c-fc3bbe7c38ee"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "93/93 [==============================] - 0s 2ms/step\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'AUC: {auc:.2%}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OIrIZEHabz0D",
+        "outputId": "5fa2e127-a281-4c51-b736-00e17db98cb9"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AUC: 98.31%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Deploy**"
+      ],
+      "metadata": {
+        "id": "B2cRnWgwb-8X"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ne1V6tznVa7Y"
+        "id": "bqpbDjEhcBFd"
       },
       "execution_count": null,
       "outputs": []
